first dayy, day 1, beningin, start

--- a/package.json
+++ b/package.json
@@ -9,25 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-<<<<<<< HEAD
+    "convex": "^1.12.2",
     "lucide-react": "^0.396.0",
-=======
-    "lucide-react": "^0.399.0",
->>>>>>> 9781a17c3d793aa6bb19022d4b11a42929f6176c
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-<<<<<<< HEAD
     "@trunkio/launcher": "^1.3.1",
-=======
->>>>>>> 9781a17c3d793aa6bb19022d4b11a42929f6176c
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
